Add more font weights

--- a/css/config/_fonts.scss
+++ b/css/config/_fonts.scss
@@ -15,7 +15,15 @@ $Raleway: 'Raleway', sans-serif;
 }
 
 // Font Sizes
-$_16: 16px;
+$_16: 1em;
 
 // Font Weights
-$_700: 700;
+$thin: 100;
+$extra-light: 200;
+$light: 300;
+$regular: 400;
+$medium: 500;
+$semi-bold: 600;
+$bold: 700;
+$extra-bold: 800;
+$black: 900;
