--- a/css/modules/_header.scss
+++ b/css/modules/_header.scss
@@ -8,7 +8,7 @@
   background-color: $black;
   color: $white;
   font-family: $Montserrat;
-  font-weight: $_700;
+  font-weight: $bold;
   font-size: $_16;
   letter-spacing: 5.7px;
   padding: 1.1em .7em;
