--- a/css/modules/_header.scss
+++ b/css/modules/_header.scss
@@ -15,3 +15,35 @@
   text-decoration: none;
   text-transform: uppercase;
 }
+
+.site-nav-menu-button{
+  color: black;
+  font-family: $Montserrat;
+  font-size: .66em;
+  font-weight: $bold;
+  padding-top: 12px;
+  position: relative;
+  align-self: self-start;
+  text-indent: -3px;
+  text-transform: uppercase;
+  &:before{
+    content: '';
+    display: block;
+    background-color: currentColor;
+    height: 3px;
+    width: 92%;
+    position: absolute;
+    top: 4px;
+    left: -1px;
+  }
+  &:after{
+    content: '';
+    display: block;
+    height: 3px;
+    width: 92%;
+    background-color: currentColor;
+    position: absolute;
+    bottom: -5px;
+    left: -1px;
+  }
+}
