--- a/css/modules/_header.scss
+++ b/css/modules/_header.scss
@@ -52,3 +52,9 @@
   padding-right: 105px;
   text-indent: 17px;
 }
+
+@media screen and (max-width: 768px){
+  .site-main{
+    padding: 32px 20px 0;
+  }
+}
