--- a/css/modules/_header.scss
+++ b/css/modules/_header.scss
@@ -17,7 +17,7 @@
 }
 
 .site-nav-menu-button{
-  color: black;
+  color: $white;
   font-family: $Montserrat;
   font-size: .60em;
   font-weight: $bold;
@@ -31,7 +31,7 @@
 }
 
 .site-hero{
-  color: $black;
+  color: $white;
   font-family: $Raleway;
   text-align: right;
   padding-bottom: 144px;
