--- a/css/modules/_header.scss
+++ b/css/modules/_header.scss
@@ -1,7 +1,10 @@
+// HEADER
+
 .site-main{
   display: flex;
   justify-content: space-between;
   padding: 32px 120px 0 126px;
+  position: relative;
 }
 
 .site-main-home-link{
