--- a/css/modules/_header.scss
+++ b/css/modules/_header.scss
@@ -31,6 +31,9 @@
   border-bottom: 3px solid currentColor;
   margin: 4px 4px 0 0;
   letter-spacing: 1px;
+  &:hover{
+    cursor: pointer;
+  }
 }
 
 .site-hero{
