--- a/css/config/_placeholders.scss
+++ b/css/config/_placeholders.scss
@@ -3,8 +3,10 @@
 %line{
   content: '';
   display: block;
+  
   height: 2px;
   width: 50px;
+  margin: 26px auto 38px auto;
+
   background-color: $black;
-  margin: 26px auto 38px auto;;
 }
