--- a/css/modules/_famous-quotes.scss
+++ b/css/modules/_famous-quotes.scss
@@ -68,7 +68,9 @@
   right: 0;
   bottom: 0;
 
-  background-color: antiquewhite;
+  background-image: url('../img/quotes-slider/quotes-slider-img.jpg');
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 @media screen and (max-width: 980px){
