--- a/css/modules/_quotes_movies.scss
+++ b/css/modules/_quotes_movies.scss
@@ -16,7 +16,7 @@
 }
 
 .quotes-movies-item{
-  flex-basis: calc(50%);  
+  width: 50%;  
 
   padding: 31px;
 }
@@ -90,7 +90,7 @@
 
 
 @media screen and (max-width: 885px){
-  
+
   .quotes-movies{
     padding-right: 10px;
     padding-left: 10px;
@@ -103,17 +103,17 @@
     width: 100%;
   }
 
+  .item-0,
+  .item-2{
+    border-right: 0;
+  }
+
  }
 
  @media screen and (max-width: 550px){
 
   .quotes-movies-wrapper{
     flex-direction: column;
-  }
-
-  .item-0,
-  .item-2{
-    border-right: 0;
   }
 
   .item-3{
