Create file 'quote_of_the_day.scss'

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -25,3 +25,4 @@
 @import './modules/intro';
 @import './modules/famous-quotes';
 @import './modules/quotes_movies';
+@import './modules/quote_of_the_day';
