Add html mock content (section quotes of the day)

--- a/css/modules/_quote_of_the_day.scss
+++ b/css/modules/_quote_of_the_day.scss
@@ -1,2 +1,13 @@
 // Quote of the day
 
+.quotes-daily-section{
+  font-family: $Raleway;
+}
+
+.quote-daily{
+  font-weight: $bold;
+}
+
+.quote-daily-source{
+  font-weight: $regular;
+}
