--- a/css/styles.scss
+++ b/css/styles.scss
@@ -27,3 +27,4 @@
 @import './modules/famous-quotes';
 @import './modules/quotes_movies';
 @import './modules/quote_of_the_day';
+@import './modules//posters';
