--- a/css/modules/_posters.scss
+++ b/css/modules/_posters.scss
@@ -20,8 +20,17 @@
 
 .posters-extra{
   position: absolute;
-  bottom: 0;
+  bottom: 10px;
   left: 0;
+  right: 0;
+
+  padding: 0 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.posters-extra-link{
+  color: $white;
 }
 
 .posters-content-left{
