--- a/css/modules/_posters.scss
+++ b/css/modules/_posters.scss
@@ -25,12 +25,22 @@
   right: 0;
 
   padding: 0 10px;
+
   display: flex;
   justify-content: space-between;
 }
 
 .posters-extra-link{
   color: $white;
+}
+
+.arrow{
+ 
+    width: 30px;
+    height: 20px;
+    background-image: url('.././../quotes/img/arrow.png');
+    border: 1px solid red;
+  
 }
 
 .posters-content-left{
