--- a/css/modules/_posters.scss
+++ b/css/modules/_posters.scss
@@ -38,6 +38,24 @@
   justify-content: space-between;
 }
 
+.posters-content-text-one{
+  border: 1px solid green;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate((-50%, -50%));
+
+  color: $white;
+
+  font-family: $TW;
+  font-weight: $bold;
+  font-size: 2.9em;
+  letter-spacing: 5px;
+  line-height: 1.3;
+  text-align: center;
+  text-transform: uppercase;
+}
+
 .posters-extra-link{
   color: $white;
 
