--- a/css/modules/_posters.scss
+++ b/css/modules/_posters.scss
@@ -13,18 +13,6 @@
   width: 100%;
 }
 
-// Show extra on hover
-.posters-content-show-extra{
-  position: relative;
-  overflow: hidden;
-  
-  &:hover .posters-extra{
-    transition: bottom .2s ease;
-    bottom: 20px;
-  }
-  
-}
-
 .posters-extra{
   position: absolute;
   bottom: -20px;
@@ -37,6 +25,20 @@
   display: flex;
   justify-content: space-between;
 }
+
+// Show extra on hover
+.posters-content-show-extra{
+  position: relative;
+  overflow: hidden;
+  
+  &:hover .posters-extra{
+    transition: bottom .2s ease;
+    bottom: 20px;
+  }
+  
+}
+
+// Text for each poster
 
 .posters-content-text-one{
   position: absolute;
@@ -117,6 +119,9 @@
   font-size: .85em;
 }
 
+
+// Poster extra links
+
 .posters-extra-link{
   color: $white;
 
@@ -159,12 +164,10 @@
 }
 
 .posters-content-left{
-  border: 1px solid red;
   width: 40%;
 }
 
 .posters-content-right{
-  border: 1px solid blue;
   width: 53%;
 }
 
@@ -180,4 +183,36 @@
 .posters-content-right-bottom-one,
 .posters-content-right-bottom-two{
   width: 44%;
+}
+
+@media screen and (max-width: 998px){
+
+  .posters-wrapper{
+    padding: 20px 5px;
+  }
+
+  .posters-inner{
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .posters-extra{
+    bottom: 20px;
+  }
+
+  .posters-content-left,
+  .posters-content-right,
+  .posters-content-right-bottom-one,
+  .posters-content-right-bottom-two{
+    width: 100%;
+  } 
+
+}
+
+@media screen and (max-width: 468px){
+
+  .posters-content-right-bottom{
+    flex-direction: column;
+  }
+
 }
