Add styles to footer top menu

--- a/css/common/_headings.scss
+++ b/css/common/_headings.scss
@@ -26,3 +26,20 @@
     margin: 20px auto 60px 0;
   }
 }
+
+.headingH3{
+  font-weight: $bold;
+  font-size: .76em;
+  letter-spacing: 1.4px;
+  text-transform: uppercase;
+
+  margin-bottom: 30px;
+}
+
+.margin-contact{
+  margin-bottom: 30px;
+}
+
+.margin-subscribe{
+  margin-bottom: 21px;
+}
