--- a/css/styles.scss
+++ b/css/styles.scss
@@ -29,3 +29,4 @@
 @import './modules/quotes_movies';
 @import './modules/quote_of_the_day';
 @import './modules//posters';
+@import './modules/footer';
