--- a/css/modules/footer.scss
+++ b/css/modules/footer.scss
@@ -57,9 +57,16 @@
 }
 
 .block-subscribe-input{
+  background-color: #f2f4f5;
+  border: none;
+
   margin-bottom: 18px;
   margin-top: 22px;
+  padding: .4em 0 .4em .7em;
   width: 100%;
+  
+  font-size: .7em;
+  letter-spacing: 1px;
 }
 
 .block-subscribe-button{
