Add responsive style (section footer menu) and create common component overlay

--- a/css/config/_colors.scss
+++ b/css/config/_colors.scss
@@ -1,7 +1,8 @@
 // COLORS
 
-$black: #222222;
+$black: #000000;
 $beige: #ffddd5;
 $grey: #444444;
 $greyBorder: #f6f6f6;
 $white: #ffffff;
+$overlay: #eae2d1;
