--- a/css/modules/footer.scss
+++ b/css/modules/footer.scss
@@ -11,10 +11,6 @@
   display: flex;
 }
 
-.secondary-menu-block{
-  //line-height: 1;
-}
-
 .secondary-menu-list-wrapper{
   line-height: 1.3;
 }
@@ -39,6 +35,7 @@
 .secondary-menu-text{
   color: currentColor;
   font-size: .66em;
+  font-weight: $bold;
   letter-spacing: 1px;
   text-decoration: none;
   &:hover{
@@ -70,7 +67,8 @@
 }
 
 .block-subscribe-button{
-
+  font-size: .62em;
+  width: auto;
 }
 
 
@@ -78,4 +76,21 @@
 
 .footer-top{
   margin-bottom: 150px;
+}
+
+@media screen and (max-width: 890px){
+
+  .secondary-menu{
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .block-browse,
+  .block-shop,  
+  .block-contact,  
+  .block-subscribe{
+    margin-bottom: 30px;
+    width: 80%;
+  }
+
 }
