--- a/css/common/_button.scss
+++ b/css/common/_button.scss
@@ -1,11 +1,15 @@
 // Button
 
 .call-to-action{
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 .call-to-action-center{
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .call-to-action-button{
