--- a/css/modules/_header.scss
+++ b/css/modules/_header.scss
@@ -3,8 +3,14 @@
 .site-main{
   position: relative;
 
+  display: -webkit-box;
+
+  display: -ms-flexbox;
+
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding: 32px 120px 0 126px;
 }
 
