--- a/css/modules/_quotes_movies.scss
+++ b/css/modules/_quotes_movies.scss
@@ -10,9 +10,16 @@
 
   font-family: $Raleway;
 
+  display: -webkit-box;
+
+  display: -ms-flexbox;
+
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .quotes-movies-item{
@@ -83,7 +90,10 @@
  @media screen and (max-width: 550px){
 
   .quotes-movies-wrapper{
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 
   .item-3{
