--- a/css/modules/_slider.scss
+++ b/css/modules/_slider.scss
@@ -1,8 +1,12 @@
 // HEADER SLIDER
 
 .slider{
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin: 0 auto;
   padding-bottom: 72px;
   width: 114px;
