--- a/css/modules/_quote_of_the_day.scss
+++ b/css/modules/_quote_of_the_day.scss
@@ -10,7 +10,7 @@
 }
 
 .quote-daily-inner{
-  background-image: url('.././../quotes/img/quote-of-the-day.jpg');
+  background-image: url('.././../img/quote-of-the-day.jpg');
   background-repeat: no-repeat;
   background-size: cover;
 
