--- a/css/modules/_posters.scss
+++ b/css/modules/_posters.scss
@@ -181,7 +181,7 @@
   top: 0;
   right: -30px;
 
-  background-image: url('.././../quotes/img/arrow.png');
+  background-image: url('.././../img/arrow.png');
   background-size: 100%;
   background-repeat: no-repeat;
 }
