--- a/css/modules/_posters.scss
+++ b/css/modules/_posters.scss
@@ -69,7 +69,7 @@
 
   color: $white;
 
-  font-family: $TW;
+  font-family: $TW2;
   font-weight: $bold;
   font-size: 2.9em;
   letter-spacing: 5px;
