--- a/css/styles.css
+++ b/css/styles.css
@@ -576,7 +576,7 @@ table {
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   color: #ffffff;
-  font-family: "Tw Cen MT Condensed", sans-serif;
+  font-family: "Tw Cen MT Condensed Extra Bold", sans-serif;
   font-weight: 700;
   font-size: 2.9em;
   letter-spacing: 5px;
